# tb14-_wtx_learn

./: README.md  readme.txt
codeblocks_workspace/c/design_parttern/: design_parttern.cbp  design_parttern.depend  design_parttern.layout  main.c
codeblocks_workspace/c/design_parttern/ooc_design_p/: header_all.h
codeblocks_workspace/c/design_parttern/ooc_design_p/AbstractFactory/src/: linux_button.c  linux_factory.c  linux_widget.c  mac_button.c  mac_factory.c  mac_widget.c  test_abstract_factory.c  windows_button.c  windows_factory.c  windows_widget.c
codeblocks_workspace/c/dyad-master_test/: dyad-master_test.cbp  dyad-master_test.depend  dyad-master_test.layout  main.c
codeblocks_workspace/c/libevent_test/: libevent_test.cbp  libevent_test.layout  main.c
codeblocks_workspace/c/wtx_test/: CMakeLists.txt  main.c  test.c  test.h  wtx_test.cbp  wtx_test.depend  wtx_test.layout
codeblocks_workspace/cpp/benchMark/: benchMark.cbp  benchMark.depend  benchMark.layout  main.cpp
codeblocks_workspace/cpp/benchMark/h/: test.h
codeblocks_workspace/cpp/benchMark/src/: test.c  test2.cpp
codeblocks_workspace/cpp/wtx_test/: main.cpp  wtx_test.cbp  wtx_test.depend  wtx_test.layout
docs/: start_md.md  tb14_env_tools.md
docs/软考相关_2025_5月份/: 数据库.md  软考第一篇概述.md
vscode_workspace/c/hello/: hello.c
vscode_workspace/c/hello_cmake/: CMakelists.txt
vscode_workspace/c/hello_cmake/src/: main.c
vscode_workspace/c/hello_cmake/src/add/: add.c  add.h
vscode_workspace/c/wtx_test/: main.c  test.c  test.h
vscode_workspace/cpp/wtx_test/: CMakeLists.txt  main.cpp
(+25 files in other folders)
